tests/runtime/invalid/exports.wai
invalid_u8: function()
invalid_s8: function()
invalid_u16: function()
invalid_s16: function()
invalid_char: function()
invalid_bool: function()
invalid_enum: function()
invalid_handle: function()
invalid_handle_close: function()
